--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-c:\Users\alina\OneDrive\Рабочий стол\Boston Public Library\Boston-Public-Library\assets\icons\favicon.ico<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
