--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body link="black" >
       
         <div class="wrapper">
+          <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
             <div class="container">
 
         <header>
