--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
           <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 <header>
           <div class="container">
+            
             <div class="welcome">
              <div class="welcome__title"><p class="title"><h1>Brooklyn Public Library</h1></p></div> 
-                <nav>
+             <div class="header__burger">
+              <span></span>
+            </div>
+             <nav>
                         <ul>
                             <li class="nav-item">
                               <a href="#about">
